# OGL_Master_Orthogonal_Projection

./: CMakeLists.txt  README.md  glad.c
OGL_Learning/: OGL_Learning.sln
OGL_Learning/OGL_Learning/: OGL_Learning.vcxproj  OGL_Learning.vcxproj.filters  Shader.h  cell_shader.frag  cell_shader.vert  cells.cpp  cells.h  grid_shader.frag  main.cpp  mainloop.h
OGL_Learning/OGL_Learning/x64/Debug/: OGL_Learning.exe.recipe  OGL_Learning.ilk  vc143.idb
OGL_Learning/OGL_Learning/x64/Debug/OGL_Learning.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OGL_Learning.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
includes/: cells.h
includes/glad/: glad.h
resources/: cell_shader.frag
src/: Shader.cpp  cells.cpp  glad.c  grid_shader.vert  main.cpp
